# advanced-gguf-quantizer

./: .dockerignore  AGENTS.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  Makefile  NOTICE.md  README.md  SECURITY.md  SKILLS.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
cmake/: advanced-gguf-quantizer-config.cmake.in  advanced-gguf-quantizer.pc.in
common/: CMakeLists.txt  arg.cpp  chat-auto-parser-generator.cpp  common.cpp  common.h  debug.h  imatrix-loader.cpp  imatrix-loader.h  preset.cpp  preset.h  reasoning-budget.cpp
common/jinja/: README.md
docs/: README.md  advanced-gguf-quantizer-cuda-acceleration.md  advanced-gguf-quantizer-flags.md  advanced-gguf-quantizer-imatrix-kld.md  advanced-gguf-quantizer-layer-policy.md  advanced-gguf-quantizer-nvfp4-contract.md
ggml/: CMakeLists.txt
ggml/include/: ggml-cuda.h  ggml.h
ggml/src/: ggml-alloc.c  ggml-backend-meta.cpp  ggml-backend.cpp  ggml-quants.c  ggml-quants.h  ggml.c  ggml.cpp
ggml/src/ggml-blas/: ggml-blas.cpp
ggml/src/ggml-cann/: aclnn_ops.cpp  ggml-cann.cpp
ggml/src/ggml-cpu/: CMakeLists.txt  ggml-cpu.c  ops.cpp
ggml/src/ggml-cuda/: common.cuh  convert.cu  cpy.cu  dequantize.cuh  fattn-mma-f16.cuh  fattn.cu  fwht.cu  getrows.cu  getrows.cuh  ggml-cuda.cu  mma-tiles.cuh  mma.cuh  mmq.cu  mmq.cuh  mmvq.cu  mxfp6_e2m3.cuh  nvfp4-adv.cu  quantize.cu  quantize.cuh  vecdotq.cuh
ggml/src/ggml-cuda/template-instances/: generate_cu_files.py  mmq-instance-mxfp6_e2m3.cu
ggml/src/ggml-cuda/vendors/: cuda.h
ggml/src/ggml-hexagon/: ggml-hexagon.cpp
ggml/src/ggml-hexagon/htp/: flash-attn-ops.c  hex-utils.h  hmx-matmul-ops.c  hmx-utils.h  htp-ctx.h  htp-ops.h  htp_iface.idl  main.c  matmul-ops.c
ggml/src/ggml-metal/: ggml-metal.cpp
ggml/src/ggml-opencl/: CMakeLists.txt  ggml-opencl.cpp
ggml/src/ggml-opencl/kernels/: cvt.cl
ggml/src/ggml-rpc/: ggml-rpc.cpp
ggml/src/ggml-sycl/: CMakeLists.txt  ggml-sycl.cpp  mmvq.cpp  vecdotq.hpp
ggml/src/ggml-vulkan/: ggml-vulkan.cpp
ggml/src/ggml-vulkan/vulkan-shaders/: mul_mat_vecq_funcs.glsl
ggml/src/ggml-webgpu/: ggml-webgpu-shader-lib.hpp  ggml-webgpu.cpp
ggml/src/ggml-webgpu/wgsl-shaders/: common_decls.tmpl  flash_attn_vec_split.wgsl  mul_mat_decls.tmpl  mul_mat_vec.wgsl
ggml/src/ggml-zdnn/: ggml-zdnn.cpp
ggml/src/ggml-zendnn/: ggml-zendnn.cpp
include/: llama.h
skills/advanced-gguf-quantizer/: SKILL.md
skills/advanced-gguf-quantizer/agents/: openai.yaml
src/: CMakeLists.txt  llama-arch.cpp  llama-arch.h  llama-context.cpp  llama-context.h  llama-cparams.h  llama-ext.h  llama-graph.cpp  llama-graph.h  llama-kv-cache.cpp  llama-memory-hybrid.cpp  llama-model-loader.cpp  llama-model.cpp  llama-model.h  llama-quant-types.h  llama-quant.cpp  llama-quant.h  llama-vocab.cpp  llama-vocab.h  llama.cpp
src/models/: kimi-linear.cpp  llama4.cpp  models.h  qwen35.cpp  qwen35moe.cpp
tests/: CMakeLists.txt  test-quantize-stats.cpp
tools/: CMakeLists.txt
tools/completion/: README.md  completion.cpp
tools/fit-params/: README.md  fit-params.cpp
tools/imatrix/: README.md  imatrix.cpp
tools/llama-bench/: README.md  llama-bench.cpp
tools/perplexity/: README.md  perplexity.cpp
tools/quantize/: CMakeLists.txt  README.md  main.cpp  quantize-imatrix.cpp  quantize-imatrix.h  quantize-kld.cpp  quantize-kld.h  quantize-mxfp6.cpp  quantize-mxfp6.h  quantize-options.cpp  quantize-options.h  quantize-selector-ledger.cpp  quantize-selector-ledger.h  quantize-selector-runtime.cpp  quantize-selector-runtime.h  quantize.cpp  quantize.h
tools/quantize/advanced/: CMakeLists.txt  best.cpp  best.h  candidate_metrics.cpp  candidate_metrics.h  capture_advanced_gguf_quantizer_tui.py  graft_mtp_tensors.py  inspect.cpp  inspect.h  main.cpp  project.cpp  project.h  recipe.cpp  recipe.h  run_monitor.cpp  run_monitor.h  run_plan.cpp  run_plan.h  shell_workflow.cpp  shell_workflow.h  terminal_ui.cpp  terminal_ui.h  tui.cpp  tui.h  utils.cpp  utils.h
